[gd_scene load_steps=3 format=2]

[ext_resource path="res://part4/part4.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 267.19, 31.7697 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
pause_particles = false

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
